kubernetes/elasticsearch.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "elasticsearch"
  labels:
    app: "elasticsearch"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "elasticsearch"
  template:
    metadata:
      labels:
        app: "elasticsearch"
    spec:
      containers:
      - name: "elasticsearch"
        image: "elasticsearch:2.2"
        volumeMounts:
          - name: elasticsearch-data
            mountPath: /usr/share/elasticsearch/data
        resources:
          requests:
            memory: "2G"
            cpu: "250m"
          limits:
            memory: "4G"
            cpu: "2"
      volumes:
        - name: elasticsearch-data
          persistentVolumeClaim:
            claimName: elasticsearch-claim
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  selector:
    app: "elasticsearch"
  ports:
  - name: elasticsearch
    port: 9200
    targetPort: 9200
