kubernetes/mongo.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "mongo"
  labels:
    app: "mongo"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "mongo"
  template:
    metadata:
      labels:
        app: "mongo"
    spec:
      containers:
      - name: "mongodb"
        image: "mongo:3.6"
        volumeMounts:
          - name: mongo-data
            mountPath: /data/db
        resources:
          requests:
            memory: "2G"
            cpu: "250m"
          limits:
            memory: "8G"
            cpu: "2"
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
spec:
  selector:
    app: "mongo"
  ports:
  - name: mongo
    port: 27017
    targetPort: 27017
