kubernetes/web.yaml
---
apiVersion: "extensions/v1beta1"
kind: "Deployment"
metadata:
  name: "web"
  labels:
    app: "web"
spec:
  replicas: 1
  strategy:
    type: Recreate
    rollingUpdate: ~
  selector:
    matchLabels:
      app: "web"
  template:
    metadata:
      labels:
        app: "web"
    spec:
      # Removing fsGroup because it causes a timeout on mount (changing the group of all files takes too much time)
      #securityContext:
      #  fsGroup: 1000
      containers:
      - name: "web"
        image: "thecodingmachine/packanalyst:latest"
        imagePullPolicy: Always
        volumeMounts:
          - name: files-data
            mountPath: /var/downloads
        resources:
          requests:
            memory: "1G"
            cpu: "1"
          limits:
            memory: "8G"
            cpu: "4"
      volumes:
      - name: files-data
        persistentVolumeClaim:
          claimName: files-claim
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  selector:
    app: "web"
  ports:
  - name: http
    port: 80
    targetPort: 80
---
