kubernetes/ingress.yaml
---
apiVersion: "extensions/v1beta1"
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    #kubernetes.io/tls-acme: 'true'
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod-cluster-issuer
spec:
  tls:
  - hosts:
      - packanalyst.com
    secretName: tls-certificate
  rules:
    - host: packanalyst.com
      http:
        paths:
          - backend:
              serviceName: web
              servicePort: 80
